V0.8.12
---------
 * Added optional tab widget junctions for attachimg active tabs.
 * Draw disabled active tabs correctly.
 * Don't try to attach empty tabs (as in Kdenlive's track widget).
 * Try to attach the active tab to its tab widget even when the QStyle option of the tab widget frame doesn't exist (as in GoldenDict).
 * Fixed menuitems with both checkbox/radiobutton and submenu arrow.

V0.8.11
---------
 * Ignore frame width for toolbuttons with just an arrow as icon.
 * Toolbuttons with popup menus were too wide.
 * Set limits on toolbutton frame sizes where there isn't enough space.
 * Set limits on frame and indicator sizes of toolbutton dropdown indicators where there isn't enough space.
 * Always limit indicator size to its bounding rectangle.
 * Translucency doesn't need internalWinId (only blurring does).

V0.8.10
---------
 * Added a hacking variable for (KDE) menu titles.
 * Fixed the outline and titlebar buttons of MDI subwindows.
 * Slim toolbars by default.
 * Added a separate key for blurring the regions behind (translucent) menus and tooltips.
 * Improved Kvantum Manager's config page.
 * Who needs frame pattern?
 * Allow tiling over the interior background with a separate (translucent) pattern object.
 * Remove toolbutton text margins when there isn't enough space (as in Qupzilla's bookmark toolbar).
 * Elide tab text when needed.

V0.8.9
---------
 * Added a workaround for menu paddings inherited from parent stylesheets (as in the context menu of VLC's palylist search lineedit).
 * No shadow for tooltips/menus that are already translucent (and keep track of those made translucent).
 * Added a key for double-click.
 * Blur the regions behind translucent menus/tooltips appropriately if blurring is enabled.
 * Fixed the positioning of bottom tab labels.
 * Check for internalWinId before deleting blur atom.

V0.8.8
---------
 * Changed the layout of the config page of Kvantum Manager.